--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^4.0.2",
 		"firebase": "^10.7.0",
 		"lz-string": "^1.5.0",
 		"toastify-js": "^1.12.0"
